--- a/src/sass/_typography.scss
+++ b/src/sass/_typography.scss
@@ -142,7 +142,7 @@ p, .p {
   font-size: 1em;
   color: $primaryblue;
   letter-spacing: 0.51px;
-  &.secondary {
+  &.link-secondary {
     color: #fff;
   }
   .uc-icon {
