--- a/src/sass/components/_collapse.scss
+++ b/src/sass/components/_collapse.scss
@@ -34,7 +34,7 @@
     }
   }
   .uc-collapse_body {
-    transition: all .25s linear;
+    transition: height .25s linear;
   }
 }
 
