--- a/src/sass/components/_dividers.scss
+++ b/src/sass/components/_dividers.scss
@@ -11,7 +11,6 @@
 .uc-text-divider {
   width: 36px;
   height: 4px;
-  margin: 12px 0;
   &.divider-primary {
     background-color: $primaryblue;
   }
