--- a/src/sass/components/_tags.scss
+++ b/src/sass/components/_tags.scss
@@ -21,3 +21,9 @@
     @include secondary-shadow;
   }
 }
+
+.uc-tags {
+  .uc-tag {
+    margin: 4px;
+  }
+}
