--- a/src/sass/components/_top-bar.scss
+++ b/src/sass/components/_top-bar.scss
@@ -25,4 +25,7 @@
   .mobile-logo img {
     min-width: 185px;
   }
+  .uc-top-bar_links {
+    justify-content: space-between;
+  }
 }
